[package]
name = "cog"
version = "0.0.1"
description = "A ed-like text editor"
license = "Zlib"
homepage = "https://github.com/johngitahi/cog"
repository = "https://github.com/johngitahi/cog"
keywords = ["text-editor"]
categories = ["command-line-utilities"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"

[[bin]]
name = "cog"
path = "src/main.rs"
